--- a/jfs/web/index.xhtml
+++ b/jfs/web/index.xhtml
@@ -5,7 +5,11 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-   <f:view>
-      <h:outputLabel value="Hello, world"/>
-   </f:view>
+<f:view>
+    <h:outputLabel value="Hello, world"/>
+</f:view>
+<body>
+<h2>Hello World!</h2>
+</body>
+
 </html>
