proving my theory

--- a/WEB/webapp1/src/main/webapp/demo/index.html
+++ b/WEB/webapp1/src/main/webapp/demo/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/material-design.css">
         <link rel="stylesheet" type="text/css" href="assets/css/small-n-flat.css">
         <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
-        <title>Clearmin template</title>
+        <title>K-Mobile</title>
     </head>
     <body class="cm-no-transition cm-1-navbar">
         <div id="cm-menu">
@@ -21,6 +21,7 @@
                     <div id="cm-menu-scroller">
                         <ul class="cm-menu-items">
                             <li class="active"><a href="index.html" class="sf-house">Home</a></li>
+                            <li><a href="dashboard-sales.html" class="sf-dashboard">New</a></li>
                             <li><a href="dashboard-sales.html" class="sf-dashboard">Dashboard</a></li>
                             <li><a href="components-text.html" class="sf-brick">Components</a></li>
                             <li class="cm-submenu">
