--- a/eCare/RESTClient/src/main/webapp/home.xhtml
+++ b/eCare/RESTClient/src/main/webapp/home.xhtml
@@ -5,12 +5,9 @@
       xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
-    <title>REST Client</title>
+    <title>REST Client main page</title>
 </h:head>
 <h:body>
     <h3>User name</h3>
-    <h:form>
-        <h:outputText value="#{userBean.name}"/>
-    </h:form>
 </h:body>
 </html>
