--- a/eCare/RESTClient/src/main/webapp/home.xhtml
+++ b/eCare/RESTClient/src/main/webapp/home.xhtml
@@ -8,6 +8,6 @@
     <title>REST Client main page</title>
 </h:head>
 <h:body>
-    <h3>User name</h3>
+    #{beanController.result}
 </h:body>
 </html>
