--- a/eCare/RESTClient/src/main/webapp/User.xhtml
+++ b/eCare/RESTClient/src/main/webapp/User.xhtml
@@ -8,7 +8,7 @@
     <title>REST Client</title>
 </h:head>
 <h:body>
-    <h3>Eroror</h3>
+    <h3>Error</h3>
     <h:form>
         <h:outputText value="#{userBean.name}"/>
     </h:form>
