--- a/eCare/RESTClient/src/main/webapp/index.xhtml
+++ b/eCare/RESTClient/src/main/webapp/index.xhtml
@@ -10,10 +10,10 @@
 <h:body>
     <h3>Enter tariff title</h3>
     <h:form>
-        <!--<h:inputText value="#{beanController.tariff}"></h:inputText>-->
-        <!--<br/>-->
-        <!--<br/>-->
-        <!--<h:commandButton value="Welcome Me" action="#{beanController.getInfo}"></h:commandButton>-->
+        <h:inputText value="#{beanController.tariff}"></h:inputText>
+        <br/>
+        <br/>
+        <h:commandButton value="Get report" action="#{beanController.getInfo}"></h:commandButton>
     </h:form>
 </h:body>
 </html>
