--- a/eCare/RESTClient/src/main/webapp/error.xhtml
+++ b/eCare/RESTClient/src/main/webapp/error.xhtml
@@ -10,8 +10,7 @@
 <h:body>
     <h3>Something goes wrong.</h3>
     <h:form>
-        <h:commandButton value="Home" action="#{beanController.home}"></h:commandButton>
-        <h:commandButton value="Back" action="#{beanController.back}"></h:commandButton>
+        <h:commandButton value="Back" action="#{beanController.home}"></h:commandButton>
     </h:form>
 </h:body>
 </html>
