--- a/eCare/RESTClient/src/main/webapp/index.xhtml
+++ b/eCare/RESTClient/src/main/webapp/index.xhtml
@@ -9,12 +9,13 @@
 </h:head>
 
 <h:body>
-    <h3>Enter tariff title</h3>
-    <h:form>
-        <h:inputText value="#{beanController.tariff}"></h:inputText>
-        <br/>
-        <br/>
-        <h:commandButton value="Get report" action="#{beanController.getInfo}"></h:commandButton>
-    </h:form>
+    <center><h3>Enter tariff title</h3>
+        <h:form>
+            <h:inputText value="#{beanController.tariff}"></h:inputText>
+            <br/>
+            <br/>
+            <h:commandButton value="Get report" action="#{beanController.getInfo}"></h:commandButton>
+        </h:form>
+    </center>
 </h:body>
 </html>
