--- a/eCare/RESTClient/src/main/webapp/home.xhtml
+++ b/eCare/RESTClient/src/main/webapp/home.xhtml
@@ -5,12 +5,14 @@
       xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
-    <title>REST Client main page</title>
+    <title>Generating result</title>
 </h:head>
 <h:body>
+    <center>
     <h3>Your file ready </h3>
     <h:form>
         <h:commandButton value="Back" action="#{beanController.home}"></h:commandButton>
     </h:form>
+    </center>
 </h:body>
 </html>
