--- a/eCare/RESTClient/src/main/webapp/index.xhtml
+++ b/eCare/RESTClient/src/main/webapp/index.xhtml
@@ -5,11 +5,11 @@
       xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
-    <title>JSF 2.0</title>
+    <title>Generating page</title>
 </h:head>
-
 <h:body>
-    <center><h3>Enter tariff title</h3>
+    <center>
+        <h3>Enter tariff title</h3>
         <h:form>
             <h:inputText value="#{beanController.tariff}"></h:inputText>
             <br/>
