--- a/eCare/RESTClient/src/main/webapp/error.xhtml
+++ b/eCare/RESTClient/src/main/webapp/error.xhtml
@@ -5,12 +5,14 @@
       xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
-    <title>JSF 2.0 Hello World</title>
+    <title>Generating error</title>
 </h:head>
 <h:body>
-    <h3>Something goes wrong.</h3>
-    <h:form>
-        <h:commandButton value="Back" action="#{beanController.home}"></h:commandButton>
-    </h:form>
+    <center>
+        <h3><font color="#dc143c">Tariff wasn't found</font></h3>
+        <h:form>
+            <h:commandButton value="Back" action="#{beanController.home}"></h:commandButton>
+        </h:form>
+    </center>
 </h:body>
 </html>
