--- a/eCare/RESTClient/src/main/webapp/error.xhtml
+++ b/eCare/RESTClient/src/main/webapp/error.xhtml
@@ -9,7 +9,7 @@
 </h:head>
 <h:body>
     <center>
-        <h3><font color="#dc143c">Tariff wasn't found</font></h3>
+        <h3><font face="Georgia" color="#dc143c">Tariff wasn't found</font></h3>
         <h:form>
             <h:commandButton value="Back" action="#{beanController.home}"></h:commandButton>
         </h:form>
