--- a/eCare/RESTClient/src/main/webapp/home.xhtml
+++ b/eCare/RESTClient/src/main/webapp/home.xhtml
@@ -9,10 +9,10 @@
 </h:head>
 <h:body>
     <center>
-    <h3>Your file ready </h3>
-    <h:form>
-        <h:commandButton value="Back" action="#{beanController.home}"></h:commandButton>
-    </h:form>
+        <h3><font face="Georgia">Your file ready </font>></h3>
+        <h:form>
+            <h:commandButton value="Back" action="#{beanController.home}"></h:commandButton>
+        </h:form>
     </center>
 </h:body>
 </html>
