--- a/eCare/RESTClient/src/main/webapp/index.xhtml
+++ b/eCare/RESTClient/src/main/webapp/index.xhtml
@@ -9,7 +9,7 @@
 </h:head>
 <h:body>
     <center>
-        <h3>Enter tariff title</h3>
+        <h3><font face="Georgia">Enter tariff title</font></h3>
         <h:form>
             <h:inputText value="#{beanController.tariff}"></h:inputText>
             <br/>
